fixed spacing issue when responsive

--- a/inc/css/base.css
+++ b/inc/css/base.css
@@ -81,6 +81,7 @@ li{
 
 .list-block{
   -webkit-column-break-inside: avoid;
+  margin-bottom: .83em;
 }
 
 @media only screen and (max-width: 767px) {
